--- a/client/index.html
+++ b/client/index.html
@@ -79,7 +79,7 @@
 							</a>
 						</div>
 						<div class="float-right social-download-wrap">
-							<a href="#" class="btn btn-default margin-right-20 float-left">
+							<a href="./docs/Hv_resume_Josue1.pdf" class="btn btn-default margin-right-20 float-left" download>
 								<span class="mask"></span>
 								<span class="btn-label">
 									<b>download resume</b>
@@ -447,7 +447,6 @@
 						<h6>work</h6>
 						<div class="portfolio-wrap project-gallery padding-sec-lg">
 							<ul id="portfolio" class="portf auto-construct project-gallery" data-col="2">
-								 
 								<li class="item" data-src="http://www.youtube.com/watch?v=Pq9yPrLWMyU"
 									data-poster="img/mock2.jpg"
 									data-sub-html="<h6>MODERN WORK</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
